packages/tree-sitter-twig/grammar.js
    template: ($) => repeat($._source_element),

    _source_element: ($) =>
      choice($._statement, $.output, $.comment, $.var_declaration, $.content),

    output: $ => seq(
      alias(choice('{{', '{{-', '{{~'), 'embedded_begin'),
      optional($.expression),
      alias(choice('}}', '-}}', '~}}'), 'embedded_end')
    ),

    parenthesized_expression: ($) => seq('(', $.expression, ')'),

    identifier: ($) =>
      choice(
        /[a-zA-Z_\x7f-\xff][a-zA-Z0-9_\x7f-\xff]*/,
        'divisible by',
        'same as',
      ),

    null: () => choice('null', 'none', 'NULL', 'NONE'),
    number: () => /[0-9]+(?:\.[0-9]+)?([Ee][\+\-][0-9]+)?/,
    boolean: () => choice('true', 'false', 'TRUE', 'FALSE'),
    string: () => /"([^#"\\]*(?:\\.[^#"\\]*)*)"|'([^'\\]*(?:\\.[^'\\]*)*)'/,
    interpolated_string: ($) =>
      seq(
        alias('"', 'string'),
        repeat(
          choice(
            alias(choice('\\"', '\\#', '\\\\', /[^#"\\\\]+/), $.string),
            seq(
              alias('#{', 'embedded_begin'),
              $.expression,
              alias('}', 'embedded_begin'),
            ),
          ),
        ),
        alias('"', 'string'),
      ),
    spread_element: ($) =>
      seq('...', field('expr', alias($.identifier, $.variable))),
    array: ($) =>
      seq('[', commaSep($.expression), optional($.spread_element), ']'),
    object: ($) =>
      seq(
        '{',
        commaSep(choice($.pair, alias($.identifier, $.variable))),
        optional($.spread_element),
        '}',
      ),

    pair: ($) =>
      seq(field('key', $._property_name), ':', field('value', $.expression)),

    _property_name: ($) =>
      choice(
        $.string,
        $.number,
        $.identifier,
        $.computed_property_name,
      ),

    computed_property_name: ($) => seq('(', $.expression, ')'),

    arrow_function: ($) =>
      seq(
        choice(
          field('parameter', alias($.identifier, $.parameter)),
          seq(
            '(',
            commaSep(field('parameter', alias($.identifier, $.parameter))),
            ')',
          ),
        ),
        '=>',
        field('expr', $.expression),
      ),

    optional_member_expression: ($) =>
      prec(
        'member',
        seq(
          field('object', choice($.expression, $.primary_expression)),
          '?.',
          field('property', alias(choice($.identifier, /[0-9]+/), $.property)),
        ),
      ),

    member_expression: ($) =>
      prec(
        'member',
        seq(
          field('object', choice($.expression, $.primary_expression)),
          '.',
          field('property', alias(choice($.identifier, /[0-9]+/), $.property)),
        ),
      ),

    slice: ($) =>
      seq(
        optional(field('start', choice($._property_name, $.unary_expression))),
        ':',
        optional(field('length', $.expression)),
      ),

    subscript_expression: ($) =>
      prec.right(
        'member',
        seq(
          field('object', choice($.expression, $.primary_expression)),
          '[',
          choice(field('index', $.expression), field('slice', $.slice)),
          ']',
        ),
      ),

    call_expression: ($) =>
      choice(
        prec(
          'member',
          seq(
            field(
              'name',
              choice(alias($.identifier, $.function), $.primary_expression),
            ),
            field('arguments', $.arguments),
          ),
        ),
        prec(
          'call',
          seq(
            field(
              'name',
              choice(alias($.identifier, $.function), $.expression),
            ),
            field('arguments', $.arguments),
          ),
        ),
      ),

    arguments: ($) =>
      seq(
        '(',
        commaSep(field('argument', choice($.named_argument, $.expression))),
        ')',
      ),

    named_argument: ($) =>
      seq(
        field('key', alias($.identifier, $.variable)),
        choice('=', ':'),
        field('value', $.expression),
      ),

    unary_expression: ($) =>
      prec.left(
        'unary',
        choice(
          .../** @type {const} */ ([
            ['+', 500],
            ['-', 500],
            ['not', 50],
          ]).map(([operator, precedence]) =>
            prec.left(
              precedence,
              seq(field('operator', operator), field('argument', $.expression)),
            ),
          ),
        ),
      ),

    binary_expression: ($) => choice(
        .../** @type {const} */ ([
          ['or', 10],
          ['and', 15],
          ['b-or', 16],
          ['b-xor', 17],
          ['b-and', 18],
          ['==', 20],
          ['!=', 20],
          ['<=>', 20],
          ['<', 20],
          ['>', 20],
          ['>=', 20],
          ['<=', 20],
          ['not in', 20],
          ['in', 20],
          ['matches', 20],
          ['starts with', 20],
          ['ends with', 20],
          ['has some', 20],
          ['has every', 20],
          ['..', 25],
          ['+', 30],
          ['-', 30],
          ['~', 40],
          ['*', 60],
          ['/', 60],
          ['//', 60],
          ['%', 60],
          ['is', 100],
          ['is not', 100],
          ['is divisible by', 100],
          ['is same as', 100],
          ['**', 200, 'right'],
          ['??', 300, 'right'],
          ['???', 300, 'right'], // https://nystudio107.com/docs/empty-coalesce
        ]).map(([operator, precedence, associativity = 'left']) =>
          prec[associativity](
            precedence,
            seq(
              field('left', $.expression),
              field('operator', alias(operator, 'operator')),
              field('right', $.expression),
            ),
          ),
        ),
      ),

    ternary_expression: ($) =>
      prec.right(
        'ternary',
        seq(
          field('condition', $.expression),
          choice(
            seq(
              alias('?', 'operator'),
              field('consequence', $.expression),
              optional(
                seq(alias(':', 'operator'), field('alternative', $.expression)),
              ),
            ),
            seq(alias('?:', 'operator'), field('alternative', $.expression)),
          ),
        ),
      ),

    filter_expression: ($) =>
      prec.right(
        'filter',
        seq(
          field('object', choice($.expression, $.primary_expression)),
          alias('|', 'operator'),
          field('name', alias($.identifier, $.function)),
          optional(field('arguments', $.arguments)),
        ),
      ),

    set: ($) =>
      statement(
        $,
        alias('set', 'keyword'),
        commaSep1(field('variable', alias($.identifier, $.variable))),
        token('='),
        commaSep1(field('value', $.expression)),
      ),
